<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Benefits"
    android:orientation="vertical"
    android:background="@drawable/bg">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    app:cardMaxElevation="20dp"
    app:cardElevation="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="YOGA IS FOR EVERYONE"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="YOGA ENCOURAGES OVERALL HEALTH AND WELLNESS"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="YOGA HAS MANY FACES"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="STRENGTH TRAINING AND FLEXIBILITY"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="HOW DOES POWER YOGA BUILD MUSCLE?"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="POWER YOGA AND THE CORE"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a6"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="POWER YOGA’S EFFECT ON THE BODY"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a7"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>
</LinearLayout>